--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="container-lg text-center">
             <div class="infomgs">
                 <h2 class="m-3">Our Featured Products</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, odit?</p>
+                <p class="p-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, odit?</p>
             </div>
             <div class="d-flex justify-content-center">
                 <ul class="nav nav-underline" id="myTab" role="tablist">
