--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
 
     <section class="section3 py-3">
 
-        <div class="container-lg text-center">
-            <div class="infomgs">
+        <div class="container-lg px-4 text-center">
+            <div class="infomgs ">
                 <h2 class="m-3">Our Featured Products</h2>
-                <p class="p-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, odit?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, odit?</p>
             </div>
             <div class="d-flex justify-content-center">
                 <ul class="nav nav-underline" id="myTab" role="tablist">
