--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     tabindex="0">
 
                     <div class="container-lg">
-                        <div class="row py-5">
+                        <div class="row py-4">
                             <div class="col-12">
 
                                 <!-- display products -->
@@ -325,6 +325,7 @@
 
                                 <!-- carousel for small screen -->
                                 <div id="dogfoodCarousel" class="carousel slide d-lg-none" data-bs-ride="carousel">
+
                                     <div class="carousel-inner">
 
                                         <div class="carousel-item active">
@@ -434,18 +435,31 @@
                                         <button class="carousel-control-prev" type="button"
                                             data-bs-target="#dogfoodCarousel" data-bs-slide="prev">
                                             <span class="carousel-control-prev-icon" aria-hidden="true">
-                                                <img src="assets/pawprint.png" alt="paw-previous" width="40">
+                                                <img src="assets/pawprint.png" alt="paw-previous" width="40"
+                                                    class="d-none d-md-block">
                                             </span>
                                             <span class="visually-hidden">Previous</span>
                                         </button>
                                         <button class="carousel-control-next" type="button"
                                             data-bs-target="#dogfoodCarousel" data-bs-slide="next">
                                             <span class="carousel-control-next-icon" aria-hidden="true">
-                                                <img src="assets/pawprint.png" alt="paw-previous" width="40">
+                                                <img src="assets/pawprint.png" alt="paw-previous" width="40"
+                                                    class="d-none d-md-block">
                                             </span>
                                             <span class="visually-hidden">Next</span>
                                         </button>
 
+                                    </div>
+
+                                    <div class="carousel-indicators d-sm-block d-md-none d-lg-none mb-0">
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="0"
+                                            class="btn-in active" aria-current="true" aria-label="Slide 1"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="1"
+                                            class="btn-in" aria-label="Slide 2"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="2"
+                                            class="btn-in" aria-label="Slide 3"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="3"
+                                            class="btn-in" aria-label="Slide 4"></button>
                                     </div>
 
                                 </div>
@@ -670,19 +684,33 @@
                                         <button class="carousel-control-prev" type="button"
                                             data-bs-target="#dogtoyCarousel" data-bs-slide="prev">
                                             <span class="carousel-control-prev-icon" aria-hidden="true">
-                                                <img src="assets/pawprint.png" alt="paw-previous" width="40">
+                                                <img src="assets/pawprint.png" alt="paw-previous" width="40"
+                                                    class="d-none d-md-block">
                                             </span>
                                             <span class="visually-hidden">Previous</span>
                                         </button>
                                         <button class="carousel-control-next" type="button"
                                             data-bs-target="#dogtoyCarousel" data-bs-slide="next">
                                             <span class="carousel-control-next-icon" aria-hidden="true">
-                                                <img src="assets/pawprint.png" alt="paw-previous" width="40">
+                                                <img src="assets/pawprint.png" alt="paw-previous" width="40"
+                                                    class="d-none d-md-block">
                                             </span>
                                             <span class="visually-hidden">Next</span>
                                         </button>
 
                                     </div>
+
+                                    <div class="carousel-indicators d-sm-block d-md-none d-lg-none mb-0">
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="0"
+                                            class="btn-in active" aria-current="true" aria-label="Slide 1"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="1"
+                                            class="btn-in" aria-label="Slide 2"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="2"
+                                            class="btn-in" aria-label="Slide 3"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="3"
+                                            class="btn-in" aria-label="Slide 4"></button>
+                                    </div>
+
 
                                 </div>
 
@@ -841,7 +869,7 @@
                                                         class="card-img-top p-3  img-fluid" alt="alpo">
                                                     <div class="card-body text-start">
 
-                                                        <p class="card-text">Dog Collar Shepherd Training | Tactical Dog
+                                                        <p class="card-text">Dog Collar Shepherd Training | Dog
                                                             Collar
                                                         </p>
                                                         <div class="price d-flex justify-content-between">
@@ -911,19 +939,33 @@
                                         <button class="carousel-control-prev" type="button"
                                             data-bs-target="#dogaccessCarousel" data-bs-slide="prev">
                                             <span class="carousel-control-prev-icon" aria-hidden="true">
-                                                <img src="assets/pawprint.png" alt="paw-previous" width="40">
+                                                <img src="assets/pawprint.png" alt="paw-previous" width="40"
+                                                    class="d-none d-md-block">
                                             </span>
                                             <span class="visually-hidden">Previous</span>
                                         </button>
                                         <button class="carousel-control-next" type="button"
                                             data-bs-target="#dogaccessCarousel" data-bs-slide="next">
                                             <span class="carousel-control-next-icon" aria-hidden="true">
-                                                <img src="assets/pawprint.png" alt="paw-previous" width="40">
+                                                <img src="assets/pawprint.png" alt="paw-previous" width="40"
+                                                    class="d-none d-md-block">
                                             </span>
                                             <span class="visually-hidden">Next</span>
                                         </button>
 
                                     </div>
+
+                                    <div class="carousel-indicators d-sm-block d-md-none d-lg-none mb-0">
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="0"
+                                            class="btn-in active" aria-current="true" aria-label="Slide 1"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="1"
+                                            class="btn-in" aria-label="Slide 2"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="2"
+                                            class="btn-in" aria-label="Slide 3"></button>
+                                        <button type="button" data-bs-target="#dogfoodCarousel" data-bs-slide-to="3"
+                                            class="btn-in" aria-label="Slide 4"></button>
+                                    </div>
+
 
                                 </div>
 
